# LEARN_FLOW

./: .gitignore  AGENTS.md  CLAUDE.md  PHASE_2_8_STATUS.md  README.md  kafka-simple.yaml  run_all_tests.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  security.yml
.specify/memory/: constitution.md
backend/: CLAUDE.md  pyproject.toml  pytest.ini
backend/src/agents/: __init__.py  client.py  concept_explainer.py  debugger.py  exercise_generator.py  hint_provider.py
backend/src/api/: auth.py  chat.py  code.py  docs.py  exercises.py  teacher.py
backend/src/api/middleware/: auth.py
backend/src/events/: code_events.py  exercise_events.py  struggle_events.py
backend/src/models/: __init__.py  base.py  code_submission.py  execution_result.py  exercise.py  exercise_attempt.py  hint.py  message.py  schema.sql  session.py  struggle_event.py  student.py  teacher.py  teacher_alert.py
backend/src/observability/: tracing.py
backend/src/sandbox/: config.py  sandbox_service.py  security.py
backend/src/services/: alert_service.py  chat_service.py  code_execution_service.py  data_retention_service.py  difficulty_service.py  exercise_validation_service.py  hint_service.py  notification_service.py  session_service.py  struggle_detection_service.py  student_service.py  teacher_intervention_service.py  telemetry.py  triage_service.py
frontend/: .eslintignore  CLAUDE.md  jest.config.js  next.config.js  package.json  tsconfig.json
infrastructure/: deploy.sh  verify-deployment.sh
infrastructure/dapr/: pubsub.yaml  (+1 more)
scripts/: test_all_skills.sh
(+111 files in other folders)
